fix: add colour variables for contrast link colours

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -31,6 +31,8 @@ $navy: #203149;
 $navy-light: #2e405b;
 
 $blue-alt: #5c81a9;
+$blue-alt-contrast: #5879a0;
+$blue-on-yellow: #4d6b8d;
 $blue-alt-light: #8caabb;
 $green: #b0d0be;
 $green-light: #cee6c5;
