--- a/src/scss/components/_news-and-views.scss
+++ b/src/scss/components/_news-and-views.scss
@@ -186,10 +186,6 @@
 		@include tags();
 
 		margin: rem(-16) 0 rem(16) 0;
-
-		a {
-			color: #4d6b8d;
-		}
 	}
 
 	.search-term {
