--- a/src/scss/components/_post-article.scss
+++ b/src/scss/components/_post-article.scss
@@ -25,9 +25,5 @@
 		@include tags();
 
 		margin-bottom: rem(80);
-
-		a {
-			color: #4d6b8d;
-		}
 	}
 }
